feat: :sparkles: inclusao da configuração de role do usuario